<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ProfileDetails">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/defaultprofile"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/profile" />
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logout"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="14sp"/>



</LinearLayout>